--- a/MorningAlarm/app/src/main/res/layout/activity_main.xml
+++ b/MorningAlarm/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,20 @@
         android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"></TimePicker>
+        android:layout_gravity="center_horizontal"
+        android:timePickerMode="spinner"></TimePicker>
 
     <ToggleButton
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"/>
 </LinearLayout>
