--- a/MorningAlarm/app/src/main/res/layout/activity_main.xml
+++ b/MorningAlarm/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,11 @@
         android:text=""
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="5dp"/>
 </LinearLayout>
