--- a/MorningAlarm/app/src/main/res/layout/activity_main.xml
+++ b/MorningAlarm/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="5dp"/>
 
     <ImageView
+        android:src="@drawable/ron"
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
